--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "prepare": "husky install",
+    "lint": "eslint --cache"
   },
   "dependencies": {
     "@types/node": "^16.18.11",
