--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clinical-trial-search-app",
+  "name": "pre-onboarding-8th-3-9",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,37 @@
     "lint": "eslint --cache"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "axios": "^1.2.2",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4"
+    "sass-loader": "^13.2.0",
+    "typescript": "^4.9.4",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
-    "husky": "^8.0.3",
-    "prettier": "^2.8.2"
+    "husky": "^8.0.2",
+    "prettier": "^2.8.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
