--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "typescript": "^4.9.4"
   },
